// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChangePasswordForm should match snapshot 1`] = `
<Component>
  <Form>
    <Component>
      Change password
    </Component>
    <Component>
      Please complete the following fields to change your password. You will be automatically logged out for the changes to be applied
    </Component>
    <Component>
      <Component>
        <Component
          dataTest="current-password"
          id="currentPassword"
          labelText="Current Password"
          name="currentPassword"
          type="password"
        />
      </Component>
    </Component>
    <Component>
      <Component>
        <Component
          dataTest="password"
          id="password"
          labelText="Password"
          name="password"
          type="password"
        />
      </Component>
      <Component>
        <Component
          dataTest="confirmPassword"
          id="confirmPassword"
          labelText="Confirm Password"
          name="confirmPassword"
          type="password"
        />
      </Component>
    </Component>
    <Component>
      <Component
        disabled={false}
        loading={false}
        type="submit"
        variant="primary"
      >
        Change Password
      </Component>
    </Component>
  </Form>
</Component>
`;

exports[`ChangePasswordForm should match snapshot 2`] = `
<Component>
  <Form>
    <Component>
      Change password
    </Component>
    <Component>
      Please complete the following fields to change your password. You will be automatically logged out for the changes to be applied
    </Component>
    <Component>
      <Component>
        <Component
          dataTest="current-password"
          id="currentPassword"
          labelText="Current Password"
          name="currentPassword"
          type="password"
        />
      </Component>
    </Component>
    <Component>
      <Component>
        <Component
          dataTest="password"
          id="password"
          labelText="Password"
          name="password"
          type="password"
        />
      </Component>
      <Component>
        <Component
          dataTest="confirmPassword"
          id="confirmPassword"
          labelText="Confirm Password"
          name="confirmPassword"
          type="password"
        />
      </Component>
    </Component>
    <Component>
      <Component
        disabled={true}
        loading={true}
        type="submit"
        variant="primary"
      >
        Change Password
      </Component>
    </Component>
  </Form>
</Component>
`;
